# movie_booking

./: .dockerignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cli/: booking_cli.cpp
cmake/: movie_bookingConfig.cmake.in
docker/: Dockerfile
docs/: Doxyfile.in
examples/: README.md
examples/native_client/: CMakeLists.txt  main.cpp
grpc/: BookingServiceImpl.cpp  BookingServiceImpl.hpp  server_main.cpp
include/booking/domain/: Movie.hpp  Seat.hpp  Theater.hpp
include/booking/service/: BookingManager.hpp  IBookingRepository.hpp
include/transport/: ChannelFactory.hpp  Endpoints.hpp
proto/: booking.proto
src/domain/: Movie.cpp  Seat.cpp  Theater.cpp
src/service/: BookingManager.cpp  InMemoryRepository.cpp
tests/integration/: GrpcClientSample.cpp
tests/unit/: BookingManagerTests.cpp
tools/: docker-build.cmake  make-dist.cmake
